--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(
 Maintainer: Vincent Runge <vincent.runge@univ-evry.fr>
 Description: Analyse de donnees. Ce package ne contient que les fonctions nécessaires à la transformation d'une base de donnees.
 License: MIT + file LICENSE
-Imports: data.table
+Imports: data.table, dplyr, magrittr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.1
